# Signing-Enhanced-FSS

./: README.md
factoring-based/: AR.c  BM.c  FastAR.c  FastBM.c  IR.c  IROpt.c
zk-snark-based/GM17/: Cargo.toml  LICENSE  README.md
zk-snark-based/GM17/crypto-primitives/src/crh/bowe_hopwood/: mod.rs
zk-snark-based/GM17/examples/: FSSN.rs
zk-snark-based/GM17/src/: lib.rs
zk-snark-based/GM17/src/ec_cycle_pcd/: data_structures.rs  mod.rs
zk-snark-based/GM17[LKO21]/: README.md
zk-snark-based/GM17[LKO21]/examples/: FSSN.rs
zk-snark-based/GM17[LKO21]/src/: lib.rs
zk-snark-based/GM17[LKO21]/src/ec_cycle_pcd/: data_structures.rs  mod.rs
zk-snark-based/Nova/: README.md
zk-snark-based/Nova/benches/: compressed-snark.rs  compute-digest.rs  recursive-snark.rs  sha256.rs
zk-snark-based/Nova/examples/: FSSN.rs  minroot.rs
zk-snark-based/Nova/src/: circuit.rs  lib.rs
zk-snark-based/Nova/src/spartan/: direct.rs
zk-snark-based/Nova/src/traits/: circuit.rs
